--- a/featured.html
+++ b/featured.html
@@ -27,7 +27,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex">
       <a href="index.html" class="navbar-brand">
-        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 m-3 img-fluid rounded-5" alt="breathe logo">
+        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 m-3 img-fluid rounded-5" alt="breathe logo" id="topfeat">
       </a>
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
@@ -78,14 +78,14 @@
 <div class="d-flex justify-content-center m-5 text-light">
   <div class="row">
     <div class="col-md-4">
-      <h2 class="display-4">"You" ga "Change"</h2>
+      <h2 class="display-4" id="yogs">"You" ga "Change"</h2>
       <p class="fs-3">For many office workers, the daily 
         grind of the office has become an all-too-familiar 
         routine. Even with regular breaks and weekends off, 
         it can be easy to forget to prioritize your physical 
         and mental wellbeing.
       </p>
-      <a href="beginner.html" class="btn btn-dark m-2" title="This is a button to your Journey">Begin your Journey</a>
+      <a href="beginner.html" class="btn btn-dark m-2" title="This is a button to your Journey">Continue your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
@@ -111,11 +111,11 @@
 <div class="d-flex justify-content-center m-5 text-light">
   <div class="row">
     <div class="col-md-4">
-      <h2 class="display-4">Lift it Up!</h2>
+      <h2 class="display-4" id="strtype">Lift it Up!</h2>
       <p class="fs-3">You've decided to take the plunge and start your strength exercise journey. 
         It's exciting, but can be intimidating too. 
         Whether you're a beginner or advanced lifter, the key to success is consistency.</p>
-      <a href="beginner.html#karosel6" class="btn btn-dark m-2" title="This is a button to your Journey">Begin your Journey</a>
+      <a href="beginner.html#karosel6" class="btn btn-dark m-2" title="This is a button to your Journey">Continue your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
@@ -141,11 +141,11 @@
 <div class="d-flex justify-content-center m-5 text-light">
   <div class="row">
     <div class="col-md-4">
-      <h2 class="display-4">Aerobic is life!</h2>
+      <h2 class="display-4" id="aerotype">Aerobic is life!</h2>
       <p class="fs-3">Aerobics can be done anytime and anywhere. From the comfort of your own home or workplace, 
         you can enjoy the benefits of aerobic exercise without ever having to leave your chair! 
       </p>
-      <a href="beginner.html#karosel7" class="btn btn-dark m-2" title="This is a button to your Journey">Begin your Journey</a>
+      <a href="beginner.html#karosel7" class="btn btn-dark m-2" title="This is a button to your Journey">Continue your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
@@ -166,6 +166,21 @@
     </div>
   </div>
 </div>
+
+<!-- navigator -->
+<nav id="navbar-example2" class="navbar bg-body-dark fixed-bottom px-3 mb-5">
+  <ul class="nav nav-pills meme2">
+    <li class="nav-item dropup">
+      <a class="nav-link dropdown-toggle meme3 bg-dark" title="Button to navigate" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Navigator</a>
+      <div class="dropdown-menu meme5">
+        <a  class="dropdown-item" title="Navigate to Top" href="#topfeat">Back to Top</a>
+        <a  class="dropdown-item" title="Navigate to Yoga" href="#yogs">Yoga</a>
+        <a  class="dropdown-item" title="Navigate to Strength" href="#strtype">Strength</a>
+        <a  class="dropdown-item" title="Navigate to Aerobics"href="#aerotype">Aerobics</a>
+      </div>
+    </li>
+  </ul>
+</nav>
 
   <!-- FOOTER DETAILS -->
   <div class="card text-center bg-dark bg-gradient text-white">
