--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex">
       <a href="index.html" class="navbar-brand">
-        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 m-3 img-fluid rounded-5" alt="breathe logo">
+        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 m-3 img-fluid rounded-5" alt="breathe logo" id="topgal">
       </a>
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
@@ -77,7 +77,7 @@
   </div>
 
   <div class="row">
-    <h1 class="display-2 text-white">Collections</h1>
+    <h1 class="display-2 text-white" id="collections">Collections</h1>
   <div class="col-md-6 mb-5 p-5">
       <div id="karosel5" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
@@ -164,7 +164,7 @@
     </div>
   </div>
   <div class="col-md-6 mb-5 p-5">
-      <div id="karosel5" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div id="karosel8" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner meme">
 
         
@@ -237,11 +237,11 @@
         </div>
         
       </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#karosel5" data-bs-slide="prev" title="Previous Button">
+        <button class="carousel-control-prev" type="button" data-bs-target="#karosel8" data-bs-slide="prev" title="Previous Button">
           <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#karosel5" data-bs-slide="next" title="Next button">
+        <button class="carousel-control-next" type="button" data-bs-target="#karosel8" data-bs-slide="next" title="Next button">
           <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
           <span class="visually-hidden" >Next</span>
         </button>
@@ -251,7 +251,7 @@
 
   <!-- CONTENT OF GALLERY HERE -->
   <!-- yoga card row + carousel -->
-  <div class="row text-light mx-2">
+  <div class="row text-light mx-2" id="galleries">
     <div class="col-sm-4">
       <div>
         <h1 class="display-2">Yoga</h1>
@@ -423,6 +423,20 @@
       </div>
     </div>
   </div>
+
+  <!-- inserted a new navigator -->
+  <nav id="navbar-example2" class="navbar bg-body-dark fixed-bottom px-3 mb-5">
+    <ul class="nav nav-pills meme2">
+      <li class="nav-item dropup">
+        <a class="nav-link dropdown-toggle meme3 bg-dark" title="Button to navigate" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Navigator</a>
+        <div class="dropdown-menu meme5">
+          <a  class="dropdown-item" title="Navigate to Top" href="#topgal">Back to Top</a>
+          <a  class="dropdown-item" title="Navigate to Yoga" href="#collections">Collections</a>
+          <a  class="dropdown-item" title="Navigate to Strength" href="#galleries">Galleries</a>
+        </div>
+      </li>
+    </ul>
+  </nav>
 
 <!-- FOOTER DETAILS -->
 <div class="card text-center bg-dark bg-gradient text-white mt-5">
