--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex">
       <a href="index.html" class="navbar-brand">
-        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 m-3 img-fluid rounded-5" alt="breathe logo">
+        <img src="Gallery/yoga/brlogomain.jpeg" class="imahe p-2 m-3 img-fluid rounded-5" alt="breathe logo" id="tophome">
       </a>
 
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
@@ -85,7 +85,7 @@
   </div>
 <!-- NEW ROW FOR THE HOME BANNER PREVIEW -->
   <div class="container d-flex flex-row m-5 text-light p-2">
-    <H2 class="display-1 text-center"><b>Breathe</b></H2>
+    <H2 class="display-1 text-center" id="journey"><b>Breathe</b></H2>
   </div>
 
 <!-- LEFT AREA FOR THE BANNER TEXT -->
@@ -135,6 +135,19 @@
       </div>
     </div>
   </div>
+
+  <!-- navigator -->
+<nav id="navbar-example2" class="navbar bg-body-dark fixed-bottom px-3 mb-5">
+  <ul class="nav nav-pills meme2">
+    <li class="nav-item dropup">
+      <a class="nav-link dropdown-toggle meme3 bg-dark" title="Button to navigate" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Navigator</a>
+      <div class="dropdown-menu meme5">
+        <a  class="dropdown-item" title="Navigate to Top" href="#tophome">Back to Top</a>
+        <a  class="dropdown-item" title="Navigate to Yoga" href="#journey">Journey</a>
+      </div>
+    </li>
+  </ul>
+</nav>
 
 <!-- FOOTER DETAILS -->
   <div class="card text-center bg-dark bg-gradient text-white">
