--- a/about.html
+++ b/about.html
@@ -9,19 +9,7 @@
   <link rel="stylesheet" href="breathe.css">
   <title>About Breathe</title>
 </head>
-<style>
 
- body{
-  background-image: linear-gradient(rgba(255, 255, 255,0.45),
-  rgba(0,0,0,0.75)), url(Gallery/yoga/contents.jpeg);
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  width: 100%;
-  height: 100%;
-}
-
-</style>
 <body>
    <!-- nav area -->
   <div class="container">
@@ -47,7 +35,7 @@
           </li>
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn dropdown-toggle text-white mx-1 px-2 fs-5 meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn dropdown-toggle text-white mx-2 fs-5 meme6" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
               <ul class="dropdown-menu meme4">
